fix layout is broken on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -171,7 +171,7 @@ background-color: #82c3ec;
           .profile{ 
             span{
               line-height: 0;
-              font-size: 16px;
+              font-size: 14px;
               @include mobile(){
                 font-size:12px;
               }
@@ -194,8 +194,8 @@ background-color: #82c3ec;
               width: 30px;
               height: 30px;
             }
-            width: 48px;
-            height: 48px;
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
             object-fit: cover;
           
@@ -241,11 +241,11 @@ background-color: #82c3ec;
     -moz-user-select: none;
     img {
       @include mobile(){
-        width: 40px;
-        height: 40px;
+        width: 30px;
+        height: 30px;
       }
-      width: 48px;
-      height: 48px;
+      width: 40px;
+      height: 40px;
       object-fit: cover;
       border-radius: 50%;
     }
@@ -283,9 +283,9 @@ background-color: #82c3ec;
           flex-direction: column;
           
           span {
-            font-size: 16px;
+            font-size: 14px;
             @include mobile(){
-              font-size: 13px;
+              font-size: 12px;
             }
           }
           p {
@@ -305,8 +305,8 @@ background-color: #82c3ec;
             height: 30px;
           }
           border-radius: 50%;
-          width: 48px;
-          height: 48px;
+          width: 40px;
+          height: 40px;
         }
       }
     }
@@ -324,24 +324,20 @@ background-color: #82c3ec;
       .Infobar {
       
         @include mobile(){
-          padding: 29.2px 15px 18.8px 15px;
+          padding: 26px 10px 23.3px 10px;
+          
         }
-        img{
-          @include mobile(){
-            width: 40px;
-            height: 40px;
-          }
-          width: 48px;
-          height: 48px;
-          border-radius: 50%;
-        }
+
         span{
-          font-size: 16px;
+          font-size: 14px;
+          @include mobile(){
+            font-size: 12px;
+          }
           line-height: 0;
         }
         color: #f1f6f5;
         background-color: #6b728e;
-        padding: 33px 20px 33px 20px ;
+        padding: 32px 20px 27.5px 20px ;
         display: flex;
         white-space: nowrap;
         align-items: center;
@@ -374,6 +370,11 @@ background-color: #82c3ec;
           gap: 10px;
           align-items: center;
           margin-bottom: 50px;
+          p{
+          @include mobile(){
+            font-size: 13px;
+          }
+          }
           .messageinfo {
             display: flex;
             gap: 5px;
@@ -397,11 +398,14 @@ background-color: #82c3ec;
             }
           }
           .messagecontent {
+        
             display: flex;
             flex-direction: column;
+            margin-top: 11px;
             p{
+             
                 background-color: white;
-                padding: 10px;
+                padding: 8px;
                 border-radius: 0px 10px 10px 10px;
                 max-width:fit-content;
                 -webkit-user-select: none; /* Safari */
@@ -414,11 +418,14 @@ background-color: #82c3ec;
             }
           }
         &.owner{
+         
             flex-direction: row-reverse;
             .messagecontent{
+             
                 align-items: flex-end;
             }
             p{
+              white-space:  pre-wrap;
                 background-color: #82c3ec;
                 color: white;
                 border-radius: 10px 0px 10px 10px;
